--- a/Conversions/Views/Home/Index.cshtml
+++ b/Conversions/Views/Home/Index.cshtml
@@ -2,8 +2,11 @@
     ViewData["Title"] = "Home Page";
  }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <h2>MOneda: @ViewData["moneda"] </h2>    <h2>Precio: @ViewData["precio"] </h2>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Welcome</h1>
+        <p> Un peso argentino (ARS) es igual a</p>
+        <h2>@ViewData["precio"] </h2>
+
+        <h2>@ViewData["moneda"] </h2>
+        <p> Pesos colombianos </a>.</p>
+    </div>
