--- a/Conversions/Views/Home/Index.cshtml
+++ b/Conversions/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
  }
-
+    <head>
+   
+    </head>
     <div class="text-center">
+        <input type="button" id="recargar" value="Actualizar página" />
         <h1 class="display-4">Welcome</h1>
         <p> Un peso argentino (ARS) es igual a</p>
         <h2>@ViewData["precio"] </h2>
