--- a/Conversions/Views/Home/Euro.cshtml
+++ b/Conversions/Views/Home/Euro.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Reals";
+    ViewData["Title"] = "Euro";
 }
 <head>
 
@@ -11,5 +11,5 @@
     <h2>@ViewData["precio"] </h2>
 
 
-    <h2> Real(es) (@ViewData["moneda"]) </h2>
+    <h2> Euro(s) (@ViewData["moneda"]) </h2>
 </div>
