--- a/Conversions/Views/Home/Index.cshtml
+++ b/Conversions/Views/Home/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Dolars";
  }
     <head>
    
     </head>
     <div class="text-center">
-        <input type="button" id="recargar" value="Actualizar página" />
-        <h1 class="display-4">Welcome</h1>
+       
+        <h1 class="display-4">Bienvenido</h1>
         <p> Un peso argentino (ARS) es igual a</p>
         <h2>@ViewData["precio"] </h2>
 
-        <h2>@ViewData["moneda"] </h2>
-        <p> Pesos colombianos </a>.</p>
+
+        <h2> Dolar(es) (@ViewData["moneda"]) </h2>
     </div>
