--- a/Conversions/Views/Home/Index.cshtml
+++ b/Conversions/Views/Home/Index.cshtml
@@ -5,11 +5,13 @@
    
     </head>
     <div class="text-center">
-       
+
         <h1 class="display-4">Bienvenido</h1>
         <p> Un peso argentino (ARS) es igual a</p>
         <h2>@ViewData["precio"] </h2>
 
 
         <h2> Dolar(es) (@ViewData["moneda"]) </h2>
+      
+        <p><a href=@ViewData["url"]> Url del servicio</a></p>
     </div>
