--- a/Conversions/Views/Home/Real.cshtml
+++ b/Conversions/Views/Home/Real.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Euro";
+    ViewData["Title"] = "Reals";
 }
 <head>
 
@@ -11,6 +11,9 @@
     <h2>@ViewData["precio"] </h2>
 
 
-    <h2> Euro(s) (@ViewData["moneda"]) </h2>
+    <h2> Real(es) (@ViewData["moneda"]) </h2>
+
     <p><a href=@ViewData["url"]> Url del servicio</a></p>
+
+
 </div>
