--- a/Conversions/Views/Home/Euro.cshtml
+++ b/Conversions/Views/Home/Euro.cshtml
@@ -12,5 +12,5 @@
 
 
     <h2> Euro(s) (@ViewData["moneda"]) </h2>
-    <p><a href=@ViewData["url"]> Url del servicio</a></p>
+    <p><a href=@ViewData["url"] target="right"> Url del servicio</a></p>
 </div>
