--- a/Conversions/Views/Home/Index.cshtml
+++ b/Conversions/Views/Home/Index.cshtml
@@ -12,6 +12,6 @@
 
 
         <h2> Dolar(es) (@ViewData["moneda"]) </h2>
-      
-        <p><a href=@ViewData["url"]> Url del servicio</a></p>
+
+        <p><a href=@ViewData["url"] target="right"> Url del servicio</a></p>
     </div>
