--- a/Conversions/Views/Home/Real.cshtml
+++ b/Conversions/Views/Home/Real.cshtml
@@ -12,8 +12,7 @@
 
 
     <h2> Real(es) (@ViewData["moneda"]) </h2>
-
-    <p><a href=@ViewData["url"]> Url del servicio</a></p>
+    <p><a href=@ViewData["url"] target="right"> Url del servicio</a></p>
 
 
 </div>
