--- a/Conversions/Views/Shared/_Layout.cshtml
+++ b/Conversions/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse navbar-dark bg-dark">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Dolar</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Dolar">Dolar</a>
                         </li><li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Euro">Euro</a>
                         </li>
