se añade ejercio de .map

--- a/Conversions/Views/Shared/_Layout.cshtml
+++ b/Conversions/Views/Shared/_Layout.cshtml
@@ -24,11 +24,15 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Dolar">Dolar</a>
-                        </li><li class="nav-item">
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Euro">Euro</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Real">Real</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="PersonalStudy" asp-action="Index">Autodidacta</a>
                         </li>
                     </ul>
                 </div>
