--- a/Conversions/Views/PersonalStudy/Index.cshtml
+++ b/Conversions/Views/PersonalStudy/Index.cshtml
@@ -4,22 +4,13 @@
 }
 
 <h1>Personal Study</h1>
-<h2>Función .map</h2>
 
-<p>En esta sección se muestran algunas ejercicios sobre temas que debo repasar o mejorar.</p>
 
-<p>La función .map sirve para aplicar el mismo método a cada uno de los elementos de un array.</p>
-<p>Haga clic en el botón para obtener la raiz cuadrada de cada elemento del <strong>array (4, 9, 16, 25)</strong> .</p>
-
-<button onclick="myFunction()">Probar</button>
-
-<p id="demo"></p>
-
-<script>
-var numbers = [4, 9, 16, 25];
-
-function myFunction() {
-  x = document.getElementById("demo")
-  x.innerHTML = numbers.map(Math.sqrt);
-}
-</script>
+<p>En esta sección se muestran algunas ejercicios sobre temas que debo repasar o mejorar. Haga clic en cada una para ver los ejercicios que realicé</p>
+<ul class="list-group">
+    <li class="list-group-item active">Javascript</li>
+    <li class="list-group-item">  <a class="nav-link text-dark" asp-area="" asp-controller="PersonalStudy" asp-action="Map">Función map</a></li>
+    <li class="list-group-item"><a class="nav-link text-dark" asp-area="" asp-controller="PersonalStudy" asp-action="Closure">Closure</a></li>
+    @*<li class="list-group-item">Porta ac consectetur ac</li>
+    <li class="list-group-item">Vestibulum at eros</li>*@
+</ul>
